Sun Jan 26 18:26:55 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/eval.c (GetInt): Drop support for ValueSymbol.

Sun Jan  5 14:37:59 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/lex.c (Lex_OperatorAsStr): Fix typos.

Wed Jan  1 17:43:54 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* lex.h (Lex): No longer have hash entry for Lex::Data.Id.
	* lex.c (Lex_Id, Lex_MakeReferringLocalLabel)
	(Lex_DefineLocalLabel, Lex_GetUnaryOp, Lex_GetPrim): Follow.
	(lexHashStr): Move to...
	* symbol.c (Symbol_CalculateHash): ...here.
	(EqSymLex, Symbol_Get, Symbol_Find, Symbol_Remove,
	ParseSymbolAndAdjustFlag): Follow.
	* symbol.h (Symbol_Get, Symbol_Find, Symbol_Remove): Change LexId
	argument into string and its length argument.
	* area.c (Area_CreateDWARF, Area_Ensure, c_area): Follow.
	* asm.c (ASM_DefineLabel): Likewise.
	* decode.c (Decode): Likewise.
	* directive_storagemap.c (c_alloc): Likewise.
	* expr.c (Expr_GetPrim): Likewise.
	* get.c (GetRegisterValue): Likewise.
	* input.c (Input_VarSub): Likewise.
	* lit.c (Lit_GetLitOffsetAsSymbol): Likewise.
	* local.c (Local_DefineLabel): Likewise.
	* predef_reg.c (PreDefReg_One): Likewise.
	* variables.c (Var_Define, c_lcl, c_set, Var_RestoreLocals): Likewise.

Wed Dec 25 19:25:40 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* symbol.h (Symbol): Aggregate symbol attributes into SymbolAttr.
	(SymbolAttr): Add.
	* variables.h (VarPos): Move to...
	* variables.c: ...here.
	* area.c, area.h, asm.c, debug_dwarf.c, decode.c, directive_data.c,
	directive_symbol.c, eval.c, expr.c, get.c, help_cop.c, input.c, it.c,
	lex.c, lit.c, m_cpuctrl.c, m_cpumem.c, macros.h, output.c, put.c,
	reloc.c, symbol.c, symbol.h, value.c, variables.c, variables.h: Follow.

Wed Dec 25 17:17:38 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* macro.c (Macro_GetSuffix): Add.
	(Macro_GetSuffixValue): Likewise.
	(Macro_Call): Better macro name reporting for macros with suffix.
	(c_macro): Likewise.